# Eris_test

./: .gitignore  LICENSE  README.md
eris/: CMakeLists.txt  README.md  main.cpp  package.xml
eris/include/eris/: CustomOptionDescription.hpp  OptionPrinter.hpp  console_pretty.hpp  dmc_node.hpp  encode_tmp_ffi.hpp  encoder_node.hpp  file_operations.hpp  hricase1.hpp  hricase2.hpp  hricase3.hpp  memoryops.hpp  query_client.hpp  query_server.hpp
eris/launch/: core.launch  encoder.xml  hri.launch  qservers.xml
eris/msg/: episode.msg  ffiDatabase.msg  smEntity.msg  tag.msg
eris/script/: ferdian.py  ferdianServer.py  run-qservers.sh
eris/src/: dmc_node.cpp  encoder_node.cpp  query_client.cpp  query_server.cpp  revise_knowledge_node.cpp
eris/src/file_ops/: CustomOptionDescription.cpp  OptionPrinter.cpp  file_operations.cpp
eris/src/memoryproc/: encode_tmp_ffi.cpp  hricase1.cpp  hricase2.cpp  hricase3.cpp  memoryops.cpp
eris/srv/: query.srv
eris/test/: core.test
folder/: source cpde.cpp
visor/: CMakeLists.txt  README.md  package.xml
visor/include/visor/: attn_window_node.hpp  img_chnldvdr_node.hpp  img_resizer_node.hpp  local_color_node.hpp  local_shape_node.hpp  object_extractor.hpp  saliency_det_node.hpp
visor/include/visor/MPEG7FexLib_src_OpenCV22/: Convert.h  Descriptors.h  Feature.h  Frame.h
visor/include/visor/MPEG7FexLib_src_OpenCV22/AddressLib/: inter.h  intra.h  nhood.h  vopio.h
visor/include/visor/MPEG7FexLib_src_OpenCV22/Descriptors/: DominantColor.h
visor/include/visor/MPEG7FexLib_src_OpenCV22/Extraction/: ColorLayoutExtraction.h  ColorSpaceExtraction.h  ColorStructureExtraction.h  ContourShapeExtraction.h  DominantColorExtraction.h  EdgeHistExtraction.h  EigenFaceData.h  FaceRecognitionExtraction.h  GoFGoPColorExtraction.h  HomoTextureExtraction.h  RegionShapeExtraction.h  ScalableColorExtraction.h
visor/include/visor/Vattn/: extract_data.hpp  saliency_map.hpp  vattn.hpp
visor/launch/: camera_setting.xml  camtest.launch  core.launch  export.launch  perception.xml
visor/msg/: blobInfo.msg  colorInfo.msg  detEntityArray.msg  localColor.msg  localTexture.msg  sceneChanges.msg  textureInfo.msg
visor/msg/Unused/: gistElemArray.msg
visor/src/: attn_window_node.cpp  img_chnldvdr_node.cpp  img_resizer_node.cpp  imgloader.cpp  local_color_node.cpp  local_shape_node.cpp  object_extractor.cpp  saliency_det_node.cpp  scenectrl.cpp
visor/src/MPEG7FexLib_src_OpenCV22/: Convert.cpp  Feature.cpp  Frame.cpp
visor/src/MPEG7FexLib_src_OpenCV22/AddressLib/: address.c  inter.c  intra.c  nhood.c  vopio.c
visor/src/MPEG7FexLib_src_OpenCV22/Descriptors/: ColorLayout.cpp  ColorQuant.cpp  ColorSpace.cpp  ColorStructure.cpp  ContourShape.cpp  DominantColor.cpp  EdgeHist.cpp  FaceRecognition.cpp  HomoTexture.cpp  RegionShape.cpp  ScalableColor.cpp
visor/src/MPEG7FexLib_src_OpenCV22/Extraction/: ColorLayoutExtraction.cpp  ColorSpaceExtraction.cpp  ColorStructureExtraction.cpp  ContourShapeExtraction.cpp  DominantColorExtraction.cpp  EdgeHistExtraction.cpp  FaceRecognitionExtraction.cpp  GoFGoPColorExtraction.cpp  HomoTextureExtraction.cpp  RegionShapeExtraction.cpp  ScalableColorExtraction.cpp  homo_texture_extractor.cpp  imgutil.c
visor/src/Unused/Gist/: gist.c  gist_bridge.cpp  standalone_image.c
visor/src/Vattn/: extract_data.cpp  saliency_map.cpp  vattn.cpp
visor/src/_Unused/: color.cpp
visor/srv/: call.srv
